--- a/Første eksamens projekt razorpage/Pages/Index.cshtml
+++ b/Første eksamens projekt razorpage/Pages/Index.cshtml
@@ -4,7 +4,39 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <title>Velkommen</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Jolle Dolle</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/ShowAllMembers">Vis medlemmer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/CreateMember">Opret medlem</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/ShowBoats">Vis både</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Welcome Section -->
+    <div class="container text-center mt-5">
+        <h1>Jolle Dolle</h1>
+        <p>Vi holder dig flydende, selv når alt andet synker</p>
+        <img src="https://handbjergmarina.com/wp-content/uploads/2022/06/Sejlklubben-sejlbaad.jpg" alt="både" class="img-fluid mt-4" />
+    </div>
+</body>
+
