--- a/Første eksamens projekt razorpage/Pages/CreateMember.cshtml
+++ b/Første eksamens projekt razorpage/Pages/CreateMember.cshtml
@@ -1,34 +1,43 @@
 ﻿@page
 @model Første_eksamens_projekt_razorpage.Pages.CreateMemberModel;
-@{
-}
-<h1>Create New Member</h1>
 
-<form method="post">
-	<div class="form-group">
-		<label asp-for="@Model.member.Id" class="control-label"></label>
-		<input asp-for="@Model.member.Id" class="form-control" />
-	</div>
-	<div class="form-group">
-		<label asp-for="@Model.member.Name" class="control-label"></label>
-		<input asp-for="@Model.member.Name" class="form-control" />
-	</div>
-	<div class="form-group">
-		<label asp-for="@Model.member.PhoneNumber" class="control-label"></label>
-		<input asp-for="@Model.member.PhoneNumber" class="form-control" />
-	</div>
-	<div class="form-group">
-		<label asp-for="@Model.member.Email" class="control-label"></label>
-		<input asp-for="@Model.member.Email" class="form-control" />
-	</div>
-	<div class="form-group">
-		<label asp-for="@Model.member.BirthDay" class="control-label"></label>
-		<input asp-for="@Model.member.BirthDay" class="form-control" />
-	</div>
+<head>
+    <link rel="stylesheet" href="/css/Booking.css" />
+</head>
+<body>
+    <h2>Create New Member</h2>
 
-	<p>
-		<div class="form-group">
-			<input type="submit" value="Create" class="btn btn-primary" />
-		</div>
-	</p>
-</form>
+    <form method="post">
+        <div>
+            <label for="Id">Member ID</label>
+            <input asp-for="member.Id" type="text" />
+            <span asp-validation-for="member.Id" class="text-danger"></span>
+        </div>
+
+        <div>
+            <label for="Name">Name</label>
+            <input asp-for="member.Name" type="text" />
+            <span asp-validation-for="member.Name" class="text-danger"></span>
+        </div>
+
+        <div>
+            <label for="PhoneNumber">Phone Number</label>
+            <input asp-for="member.PhoneNumber" type="tel" />
+            <span asp-validation-for="member.PhoneNumber" class="text-danger"></span>
+        </div>
+
+        <div>
+            <label for="Email">Email</label>
+            <input asp-for="member.Email" type="email" />
+            <span asp-validation-for="member.Email" class="text-danger"></span>
+        </div>
+
+        <div>
+            <label for="BirthDay">Birthday</label>
+            <input asp-for="member.BirthDay" type="date" />
+            <span asp-validation-for="member.BirthDay" class="text-danger"></span>
+        </div>
+
+        <button type="submit">Create Member</button>
+    </form>
+</body>
