--- a/Første eksamens projekt razorpage/Pages/Index.cshtml
+++ b/Første eksamens projekt razorpage/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     <title>Velkommen</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
 </head>
-<body>
+<body >
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -22,10 +22,10 @@
                         <a class="nav-link" href="/ShowAllMembers">Vis medlemmer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/CreateMember">Opret medlem</a>
+                        <a class="nav-link" href="/ShowBoats">Vis både</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/ShowBoats">Vis både</a>
+                        <a class="nav-link" href="/ShowAllBookings">Vis bookings</a>
                     </li>
                 </ul>
             </div>
