--- a/Første eksamens projekt razorpage/wwwroot/css/DeleteMember.css
+++ b/Første eksamens projekt razorpage/wwwroot/css/DeleteMember.css
@@ -1,4 +1,4 @@
-﻿<style >
+﻿
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -59,4 +59,4 @@ button {
         background-color: #31b0d5;
     }
 
-</style >
+
