--- a/Første eksamens projekt razorpage/Pages/ShowAllBookings.cshtml
+++ b/Første eksamens projekt razorpage/Pages/ShowAllBookings.cshtml
@@ -29,8 +29,8 @@
             {
                 <tr>
                     <td>@booking.Id</td>
-                    <td>@booking.MemberId</td>
-                    <td>@booking.BoatId</td>
+                    <td>@booking.Member</td>
+                    <td>@booking.Boat</td>
                     <td>@booking.StartDate.ToString("yyyy-MM-dd")</td>
                     <td>@booking.EndDate.ToString("yyyy-MM-dd")</td>
                     <td>@booking.TotalPrice.ToString("C")</td>
